--- a/BoxOfCourses/BoxOfCourses/Views/Home/Index.cshtml
+++ b/BoxOfCourses/BoxOfCourses/Views/Home/Index.cshtml
@@ -4,6 +4,7 @@
 
 @*script for icons*@
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@v2.13.0/devicon.min.css">
+@*script for sweetalert "swal"*@
 <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 
 <div class="container cont-top">
@@ -125,7 +126,7 @@
 <style>
 
     .cont-top {
-        padding-top: 22px;
+        margin-top: 70px;
     }
 
     #firsth1 {
@@ -374,12 +375,12 @@
             margin-top: 100px;
         }
 
-    .get-in-touch-button {
-        color: white;
-        background-color: #C126EA;
-        border: 0px;
-        font-size: 17px;
-    }
+        .get-in-touch-button {
+            color: white;
+            background-color: #C126EA;
+            border: 0px;
+            font-size: 17px;
+        }
 
 </style>
 
