--- a/BoxOfCourses/BoxOfCourses/Views/Courses/Index.cshtml
+++ b/BoxOfCourses/BoxOfCourses/Views/Courses/Index.cshtml
@@ -100,7 +100,7 @@
                         @Html.DisplayFor(modelItem => item.Level, new { @class = "course-level" })
                     </td>
                     <td class="text-center">
-                        <img class="image" style="max-width: 150px; max-height: 120px; height: 100%; padding: 5px" src="@Html.DisplayFor(modelItem => item.ImageURL)" />
+                        <img class="image" style="width: 140px; max-width: 150px; max-height: 180px; height: 130px; padding: 5px" src="@Html.DisplayFor(modelItem => item.ImageURL)" />
                     </td>
                     <td class="courseTypeCoulmn">
                         @Html.DisplayFor(modelItem => item.Type, new { @class = "modelType" })
@@ -199,7 +199,7 @@
     }
 
     th {
-        color: #FF5DDA;
+        color: #B0B0B0;
         text-transform: uppercase;
         font-size: 13px;
         letter-spacing: 4px;
