--- a/BoxOfCourses/BoxOfCourses/Views/ReviewModels/Index.cshtml
+++ b/BoxOfCourses/BoxOfCourses/Views/ReviewModels/Index.cshtml
@@ -32,8 +32,12 @@
                 @foreach (var item in Model)
                 {
                     <tr>
-                        <td class="username-td">
-                            @Html.DisplayFor(modelItem => item.UserName)
+                        <td class="username-td" user-data="@item.UserName")>
+                            @{
+                                string[] temp = (item.UserName).Split('@');
+                               
+                            }
+                            @Html.DisplayFor(modelItem => temp[0])
                         </td>
                         <td class="category-table-column">
                             @Html.DisplayFor(modelItem => item.Category)
@@ -41,7 +45,7 @@
                         <td class="comment-section-table">
                             @Html.DisplayFor(modelItem => item.Comment)
                         </td>
-                        <td>
+                        <td class="stars-column">
                             @for (int i = 0; i < item.ReviewValue; i++)
                             {
                                 <img class="colored-stars" style="width: 25px; height: 25px" src="~/Content/photos/white-star.png" />
@@ -81,11 +85,14 @@
         font-size: 13px;
         letter-spacing: 2px;
     }
-    td{
-        vertical-align: middle;
+    .stars-column{
         text-align: center;
     }
-    .username-td{
+    @*td{
+        vertical-align: middle;
+        text-align: center;
+    }*@
+    .username-td {
         color: lightblue;
         font-size: 15px;
     }
@@ -116,14 +123,14 @@
 
 @section scripts{
     <script>
+
         $(document).ready(function () {
             var table = $(".table-reviews").DataTable();
 
             tempTable = table;
-
         })
 
-
+       
         $("#ReviewsTable .js-delete").on("click", function () {
             var button = $(this);
             bootbox.confirm({
